Tidied up code in each document.  Applied BEM and Namespacing. Resized button images to equal size.

--- a/index.html
+++ b/index.html
@@ -7,21 +7,21 @@
     <link rel="stylesheet" href="Styles/main.css">
   </head>
   <body>
-    <div class='container'>
-      <div class='banner'>
+    <div class='c-container'>
+      <div class='c-container__banner'>
           <h1>Play the Rock Paper Scissors Game!</h1>
       </div>
-      <div class='main'>
-        <div class="box-1">
-          <input class='rock__img' type='image' src='Images/rock.png' value='rock'></input>
+      <div class='c-container__main'>
+        <div class="c-main__box-1">
+          <input class='c-box-1__rock-img' type='image' src='Images/rock.png' value='rock'></input>
         </div>
-        <div class="box-2">
-          <input class='paper__img' type='image' src='Images/paper.png' value='paper'></input>
+        <div class="c-main__box-2">
+          <input class='c-box-2__paper-img' type='image' src='Images/paper.png' value='paper'></input>
         </div>
-        <div class="box-3">
-          <input class='scissors__img' type='image' src='Images/scissors.png' value='scissors'></input>
+        <div class="c-main__box-3">
+          <input class='c-box-3__scissors_img' type='image' src='Images/scissors.png' value='scissors'></input>
         </div>
-        <button class="reset_button" value="reset">Click here to reset the game</button>
+        <button class="c-main__reset-button" value="reset">Click here to reset the game</button>
       </div>
       <footer>
         <p class='c-div__results--text1'>Click your selection to start.</p>
