changed data behaviour spelling to American behavior.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
           <h1>Play the Rock Paper Scissors Game!</h1>
       </div>
       <div class='c-container__main'>
-        <div data-behaviour='boxHolder' class='c-main__boxHolder'>
+        <div data-behavior='boxHolder' class='c-main__boxHolder'>
           <div class="c-main__box-1">
             <input data-behavior='playerSelection' class='c-box-1__rock-img' type='image' src='images/rock.png' value='rock'></input>
           </div>
@@ -26,8 +26,8 @@
         <button data-behavior='resetGame' class="c-main__reset-button" value="reset">Click here to reset the game</button>
       </div>
       <footer>
-        <p data-behaviour='resultsText1' class='c-div__results--text1'>Click your selection to start.</p>
-        <p data-behaviour='resultsText2'class='c-div__results--text2'>First to 5 wins. Good Luck!</p>
+        <p data-behavior='resultsText1' class='c-div__results--text1'>Click your selection to start.</p>
+        <p data-behavior='resultsText2'class='c-div__results--text2'>First to 5 wins. Good Luck!</p>
       </footer>
     </div>
     <script src="scripts/script.js"></script>
